# ronin-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.0407964  CMakeLists.txt.user.5c2a1ca  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
config/: CMakeLists.txt  RoninEngine.pc.in  RoninEngine.rc.in
include/internal/ronin/: Color.h  Gizmos.h  Level.h  LevelEntity.h  Light.h  Namespaces.h  Particle.h  Physics2D.h  Player.h  Renderer.h  ResourceManager.h  Static.h  Terrain2D.h  begin.h  framework.h
include/ronin/: Application.h  Atlas.h  AudioSource.h  Behaviour.h  CMakeLists.txt  Camera.h  Camera2D.h  Collision.h  Color.h  Component.h  ComponentEnd.h  Controls.h  Debug.h  Declarations.h  Defines.h  Font.h  FontInternal.h  GameObject.h  GameObjectEnd.h  GameObject_impl.h  Gizmos.h  InputSystem.h  Level.h  LevelEntity.h  Light.h  Math.h  MoveController2D.h  MusicPlayer.h  Namespaces.h  NavMesh.h  Object.h  ObjectParser.h  Particle.h  ParticleSystem.h  Paths.h  Physics2D.h  Player.h  RenderUtility.h  Renderer.h  ResourceManager.h  (+28 more)
source/: Application.cpp  Atlas.cpp  CMakeLists.txt  Camera.cpp  Camera2D.cpp  Color.cpp  Component.cpp  Controls.cpp  Font.cpp  FontInternal.cpp  Gizmos.cpp  Math.cpp  NavMesh.cpp  Object.cpp  ObjectParser.cpp  Paths.cpp  Renderer.cpp  ResourceManager.cpp  Sprite.cpp  SpriteRenderer.cpp  Terrain2D.cpp  Texture.cpp  Time.cpp  Types.cpp  UI.cpp  Vec2.cpp  application.cpp  each_source2.sh  inputSystem.cpp  ronin_lib.cpp
source/ai/: across.hpp  across_impl.hpp  navmesh.cpp
source/core/: application.cpp  math.cpp  resourcemanager.cpp  ronin_memory.cpp  ronin_systeminformation.cpp  systeminformation.cpp  types.cpp  vec2.cpp
source/graphics/: atlas.cpp  color.cpp  gizmos.cpp  light.cpp  particle.cpp  renderer.cpp  ronin_color.cpp  ronin_sprite.cpp  spotlight.cpp  sprite.cpp  spriterenderer.cpp
source/include/: Font.h  across.hpp  basic_ronin.h  begin.h  levelentity.h  ronin-depth.h  ronin.h  ronin_memory.h  static.h  update-across.hpp.sh
source/io/: inputsystem.cpp  justparser.cpp  paths.cpp  ronin_justparser.cpp
source/res/: font.cpp  resourcemanager.cpp  ronin_font.cpp  texture.cpp
source/res/fonts/: README.txt  font-arealike-hi.png.cpp  font-arealike.png.cpp  font.xcf
source/simulation/: application.cpp  camera.cpp  camera2d.cpp  component.cpp  gameobject.cpp  level.cpp  levelentity.cpp  light.cpp  math.cpp  object.cpp  physics2d.cpp  player.cpp  primitives.cpp  renderer.cpp  ronin_math.cpp  ronin_memory.cpp  ronin_resourcemanager.cpp  ronin_spotlight.cpp  ronin_spriterenderer.cpp  ronin_time.cpp  spotlight.cpp  spriterenderer.cpp  terrain2d.cpp  time.cpp  transform.cpp  types.cpp  vec2.cpp  world.cpp
source/ui/: controls.cpp  ronin_ui.cpp  timeline.cpp  ui.cpp  ui_controls.cpp
src/: CMakeLists.txt  clang-format.sh  ronin_lib.cpp  update-across.hpp.sh  update-brainmap.sh
src/ai/: across.hpp  across_impl.hpp  brain_impl.hpp  brain_map.hpp  brain_maze.hpp  ronin_navmesh.cpp
src/audio/: ronin_audio_backend.cpp  ronin_audio_source.cpp  ronin_music_player.cpp
src/core/: ronin_application.cpp  ronin_debug.cpp  ronin_exception.cpp  ronin_hack_tools.cpp  ronin_matrix.cpp  ronin_ronin_memory.cpp  ronin_settings.cpp  ronin_sharedpointer.cpp  ronin_simulation.cpp  ronin_sysinfo.cpp
src/core/splash/: ronin_logo.hpp  ronin_splash_world.cpp
src/gfx/: ronin_atlas.cpp  ronin_color.cpp  ronin_gizmos.cpp  ronin_render_cache.cpp  ronin_renders.cpp  ronin_sprite.cpp
src/graphics/: ronin_atlas.cpp  ronin_color.cpp  ronin_gizmos.cpp  ronin_sprite.cpp
src/include/: Font.h  basic_ronin.h  font.h  just-parser.h  ronin.h  ronin_audio.h  ronin_debug.cpp  ronin_debug.h  ronin_exception.h  ronin_fontinput.h  ronin_instances.h  ronin_matrix.h  ronin_native.h  ronin_pimpl.h  ronin_render_cache.h  ronin_sdl2.h  ronin_splash_world.h  ronin_std.h  static.h
src/io/: ronin_inputsystem.cpp  ronin_justparser.cpp  ronin_paths.cpp
src/res/: ronin_font.cpp  ronin_resource_converter.cpp  ronin_resources.cpp  ronin_texture.cpp
src/res/fonts/: README.txt  ronin_font-arealike-hi.png.hpp  ronin_font-arealike.png.hpp  ronin_font_arial.hpp  ronin_fontinternal.cpp
src/ronin/: .FontInternal.h.kate-swp  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Color.cpp  Color.h  Controls.cpp  Controls.h  Font.cpp  GameObject.cpp  GameObject.h  Gizmos.cpp  ImageExtension.h  Level.cpp  LevelEntity.cpp  LevelEntity.h  Math.cpp  Math.h  Mathf.cpp  Mathf.h  NavMesh.cpp  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  Particle.cpp  Paths.cpp  Paths.h  Physics2D.cpp  Physics2D.h  Player.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  SpriteRenderer.cpp  (+18 more)
src/sim/: ronin_ParticleSystems.cpp  ronin_camera.cpp  ronin_camera2d.cpp  ronin_collision.cpp  ronin_component.cpp  ronin_cursor.cpp  ronin_gameobject.cpp  ronin_instance_free.cpp  ronin_instance_new.cpp  ronin_light.cpp  ronin_math.cpp  ronin_movecontroller2d.cpp  ronin_object.cpp  ronin_particle.cpp  ronin_physics2d.cpp  ronin_primitives.cpp  ronin_random.cpp  ronin_renderer.cpp  ronin_resolution.cpp  ronin_script.cpp  ronin_sharedpointer.cpp  ronin_spotlight.cpp  ronin_spriterenderer.cpp  ronin_terrain2d.cpp  ronin_time.cpp  ronin_transform.cpp  ronin_types.cpp  ronin_vec2.cpp  ronin_world.cpp
src/simulation/: ronin_camera.cpp  ronin_camera2d.cpp  ronin_component.cpp  ronin_gameobject.cpp  ronin_instance_free.cpp  ronin_levelentity.cpp  ronin_light.cpp  ronin_math.cpp  ronin_object.cpp  ronin_physics2d.cpp  ronin_player.cpp  ronin_primitives.cpp  ronin_renderer.cpp  ronin_resourcemanager.cpp  ronin_resources.cpp  ronin_script.cpp  ronin_spotlight.cpp  ronin_spriterenderer.cpp  ronin_terrain2d.cpp  ronin_time.cpp  ronin_transform.cpp  ronin_types.cpp  ronin_vec2.cpp  ronin_world.cpp
src/ui/: ronin_fontinput.cpp  ronin_ui.cpp  ronin_ui_controls.cpp  ronin_ui_resources.h  ronin_ui_standards.cpp
